--- a/_posts/2019-02-03-week01.md
+++ b/_posts/2019-02-03-week01.md
@@ -3,8 +3,8 @@ layout: post
 title: Week 1
 ---
 
+For a long time, the words open source did not mean much to me. Whenever I heard it being used, I just knew that the project was editable by anyone and people's contributions were accessible to others as well. I never ventured past that knowledge and never tried editing projects myself. When I started learning more about computer science, I learned more about open source projects like Eclipse and Atom, but I still only used the official versions and never entered the community. I wanted to take OSSD because it would allow me to explore these communities in a safe and informed way. I don't know how these communities work or where to even begin with contributing to projects.
 
-This text should be replaced by your first post. 
+As long as I've known about open source projects, I've thought they were a good thing. Sharing code and information for all is a good thing, especially for those who are less privileged and who have limited access to resources. However, it does seem difficult to make money off of open source projects. In a society where people's ability to live depends on money (as in the United States), this poses a problem. Because of this, I don't believe *everything* should be open source. Deciding what should and shouldn't be open source is a difficult question as well.
 
-The easiest way to make your first post is to edit this one. 
-Go into /_posts/ and update the 2018-01-28-week01.md file. 
+I hadn't realized before the first OSSD class that Wikipedia was considered open source. In hindsight, it makes a lot of sense and so, it is probably the project that has affected my life the most. I use it almost everyday because it's so accessible and informative. Other open source projects I've used are&mdash;as I mentioned before&mdash;Eclipse and Atom. I've also used Blender a lot for 3D modeling, but haven't explored add-ons that other people have created. With Atom, I've used others' themes and compiler tools, but I think that's the most involvement I've had with open source projects.
