Fix colon in title problem

--- a/_posts/2019-02-03-week01.md
+++ b/_posts/2019-02-03-week01.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 1: My Experience With Open Source So Far
+title: Week 1&#58; My Experience With Open Source So Far
 ---
 
 For a long time, the words open source did not mean much to me. Whenever I heard it being used, I just knew that the project was editable by anyone and people's contributions were accessible to others as well. I never ventured past that knowledge and never tried editing projects myself. When I started learning more about computer science, I learned more about open source projects like Eclipse and Atom, but I still only used the official versions and never entered the community. I wanted to take OSSD because it would allow me to explore these communities in a safe and informed way. I don't know how these communities work or where to even begin with contributing to projects.
