--- a/_posts/2019-02-10-week02.md
+++ b/_posts/2019-02-10-week02.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 2
+title: Week 2&#58; Browser Extension Project Reflection
 ---
 
 When the browser extension project was first announced, I got really excited. I've always wanted to make a browser extension, but never got around to it because of school work or general lack of motivation. Having it as a school assignment would force me to learn and enable me to make more outside of school.
