Write Blog Post 3

--- a/_posts/2020-02-17-week03.md
+++ b/_posts/2020-02-17-week03.md
@@ -1,1 +1,14 @@
+---
+layout: post
+title: Week 3&#58; Post Browser Extension Project Thoughts
+---
 
+Now that the browser extension project is over, I can say it has been an enjoyable experience both in working with my team and in learning what goes into making an extension.
+
+Not everyone in my group had the same set of skills and I think it really worked to our benefit. It enabled us to easily divide the work. Since I had little experience with JavaScript, I clearly was not about to build the functionality of the extension. Instead, I was delegated to working on the CSS and the look of the extension as a whole. Not knowing some things also allowed me to learn from the others in the group who knew more about JavaScript. They explained how the code they wrote enabled the extension to work.
+
+As I mentioned in my previous blog post, this project allowed me to refresh my knowledge on GitHub. The explanation of GitHub in class also helped me a lot in my understanding of how GitHub works. Previously, I used GitHub by following step-by-step instructions. I didn't know what the commands I was using and certainly didn't know how to use GitHub collaboratively. I'm really glad for this lesson because I just joined a new art collective as a web developer. There's another person on the team who is also going to be doing web developing and together, we're going to build the website to host the collective. Already, we're planning on using GitHub to collaborate and I couldn't be more excited to use the knowledge I learned in class in the real world.
+
+I think being able to apply the things I learn in class to outside of class is really motivational. That's part of why I liked this browser extension project; I now know how to make browser extensions and can make one of my own. Seeing other students' project presentations was really cool as well. One of the ones that stuck out to me was the coin flip/dice roll extension. It looked so beautiful and they said they only used CSS to animate it! I really enjoyed the extensions that didn't have serious intentions (e.g. the Spongebob one or the Nicholas Cage one). With the short time frame and our skills as beginners, there was no way we would be able to make something super complex. I appreciated that those teams ran with the idea of making something simple and had fun with it.
+
+Ultimately, this was a fun experience and I'm looking forward to whatever we do in the class next!
