Make Week 11 Blog Post

--- a/_posts/2020-04-20-week11.md
+++ b/_posts/2020-04-20-week11.md
@@ -1,4 +1,16 @@
 ---
 layout: post
-title: Week 11&#58; 
+title: Week 11&#58; It's Been a While: Reflection on the Past Few Weeks
 ---
+
+A lot has happened in the last few weeks, and I'm not sure how to adequately explain why this is my first blog post since Blog Post #4. On Thursday, I got an email from Joanna notifying me of my mid-semester grade for the class and it's definitely far from what I wanted. I was disappointed, but not surprised. With everything going on with COVID-19 and quaratine, my motivation has plummeted. Unfortunately, that meant my classes have all suffered. Getting that email was a good wake-up call; I don't think I would have realized how bad things have gotten had I not seen it that clearly.
+
+Since then, I've made my first individual contributions to Wikipedia and freeCodeCamp. I also met with Joanna this morning to discuss a plan of action for the rest of semester. She told me not to worry about past blog posts, but to make sure I keep up with everything going forward (blog posts, project evaluations, group contributions, etc). Surprisingly, it was a rather nice conversation. I got some amusement when Joanna asked if it was my last semester at NYU and I told her that I was actually a sophomore. It's still early on in my college experience and a bad grade might not hurt me that much. However, this is a class that actually interests me and I've been missing out by not keeping up and getting the most out of the class. I can't blame everything on coronavirus--though it's definitely not blameless--because part of all this is my fault. I'm going to do better, not just for my grade, but for myself.
+
+Speaking of coronavirus, that was our topic of discussion in OSSD this past week. We talked about open efforts in regards to COVID-19. I talked about Nextstrain, a data visualization tool for viewing real time snapshots of the evolution and spread of various pathogens, and about WHO's open source app for providing information and updates about the virus in users' local areas. It was honestly nice to see how many open projects there are for helping people in this time of crisis and how many people are willing to help.
+
+I think that if I am to continue making contributions to open source projects outside of school, I'd want to contribute to projects that do social good. We had received a talk from Kevin P. Fleming of Bloomberg a couple months ago and he talked about how corporations like Bloomberg contribute to open source projects. That's nice and honestly unexpected, but I feel like I would be more fulfilled by contributing to projects that I know will go towards a good cause. People can debate the pros and cons of corporations all day, but I do not entirely trust them. I'm glad corporations are doing more for the open source community, I really do, but my time and energy won't be dedicated towards them.
+
+A part of the reason my group chose freeCodeCamp was because it is a project that has a good cause. It might not be as impactful as some of the COVID-19 projects because it doesn't save lives, but it's teaching people how to code which is still important. Maybe these new programmers will go on to contribute to a different open source project in the future. 
+
+One of the most important things I've taken away from this class is how special the open source community is. Contributors don't make contributions just for money or a paycheck; they do it for the betterment of the project and to help each other. I think there's something really nice to that. In a time where it's easy to feel disconnected from each other, having a selfless community like this is heartwarming.
