Fix title structure

--- a/_posts/2020-04-20-week11.md
+++ b/_posts/2020-04-20-week11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 11&#58; It's Been a While: Reflection on the Past Few Weeks
+title: Week 11&#58; It's Been a While - Reflection on the Past Few Weeks
 ---
 
 A lot has happened in the last few weeks, and I'm not sure how to adequately explain why this is my first blog post since Blog Post #4. On Thursday, I got an email from Joanna notifying me of my mid-semester grade for the class and it's definitely far from what I wanted. I was disappointed, but not surprised. With everything going on with COVID-19 and quaratine, my motivation has plummeted. Unfortunately, that meant my classes have all suffered. Getting that email was a good wake-up call; I don't think I would have realized how bad things have gotten had I not seen it that clearly.
