--- a/_posts/2020-04-27-week12.md
+++ b/_posts/2020-04-27-week12.md
@@ -1,9 +1,12 @@
 ---
 layout: post
-title: Week 12&#58;
+title: Week 12&#58; 
 ---
-
 
 <!-- free code camp problems (one of the maintainers seems really against the idea of contributing just for academic credit)
 open source business models: when I first heard that, I worried that it was going to venture into the realm of profiting off of free labor
 -->
+
+This week, we started a new discussion on business models for open source projects. It didn't make sense to me when I first heard that we were talking about business models. The idea of open source seems contrary to earning money. Joanna even said many have this misconception. My next thought concerned if these companies were somehow using open source as a way to get free labor. I've heard of other companies doing similar things to this. I haven't seen it with open source, but I've seen comapnies do art contests where they get to own all the art regardless of who wins. Because of this, I don't really trust corporations that profit off of free labor.
+
+Despite these misgivings, the lecture opened my eyes to how money is actually made through open source. 
