Finish Blog Post 12

--- a/_posts/2020-04-27-week12.md
+++ b/_posts/2020-04-27-week12.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 12&#58; 
+title: Week 12&#58; Thoughts on Making Money Off of Open Source and a Recent Project Interaction
 ---
 
 <!-- free code camp problems (one of the maintainers seems really against the idea of contributing just for academic credit)
@@ -9,4 +9,8 @@ open source business models: when I first heard that, I worried that it was goin
 
 This week, we started a new discussion on business models for open source projects. It didn't make sense to me when I first heard that we were talking about business models. The idea of open source seems contrary to earning money. Joanna even said many have this misconception. My next thought concerned if these companies were somehow using open source as a way to get free labor. I've heard of other companies doing similar things to this. I haven't seen it with open source, but I've seen comapnies do art contests where they get to own all the art regardless of who wins. Because of this, I don't really trust corporations that profit off of free labor.
 
-Despite these misgivings, the lecture opened my eyes to how money is actually made through open source. 
+Despite these misgivings, the lecture opened my eyes to how money is actually made through open source. Companies aren't selling the actual code that contributors give, but are profiting off things like consumer aid and add ons to the (open and free) core of the project. Additionally, the point was brought up that contributors don't have to contribute. They aren't doing it with the expectation that they will get something in return, unlike the art contests I mentioned earlier. They are contributing to benefit the community, and in some (most?) cases, with the security that the code they contribute will stay open. Learning this made me feel better about open source money and if it helps my favorite projects stay afloat, then I'm all for it.
+
+On the other hand, I had my first negative experience with open source contribution this week. It wasn't that bad and wasn't directed at me or my group, but one of the maintainers seemed against people contributing for academic credits. They said, "We encourage contributions which will help the community truly and not those which are made purely for academic credits." To be honest, I don't understand the point they were making. Why does intent matter when contributing? A contribution is still being made. Students contributing for a grade might not be long term contributors, but anybody could decide to contribute only once or twice. Should they be given them same disapproval? I do give them credit, though, because the rest of the message was friendly and I do understand that an influx of messages concerning contributions for academic credits could be annoying. It does make me wonder, though, if our contributions would be treated as positively if they knew we are also doing them for a grade. 
+
+In any case, this one comment hasn't drastically changed my view of the project--I am purposefully keeping it unnanmed in this particular blog post--and my group's personal interactions with this maintainer have been positive. I am looking forward to continuing my contribution to their work and hope that I don't run into any more negativity.
