Make Week 13 Blog Post

--- a/_posts/2020-05-04-week13.md
+++ b/_posts/2020-05-04-week13.md
@@ -1,4 +1,12 @@
 ---
 layout: post
-title: Week 12&#58; Thoughts on Making Money Off of Open Source and a Recent Project Interaction
+title: Week 13&#58; Thoughts and Updates on Contributing
 ---
+
+This past week was relatively uneventful. On Monday, we had group stand up reports. It seemed as if there wasn't a ton of updates from the groups since the last stand up, my group included. Additionally, most people wanted to present later in the schedule which Joanna found funny. My group was one of those who wanted to present later (though, not on the last day).
+
+To be honest, it doesn't feel like we've made much progress on contributing to freeCodeCamp. The first two issues seemed fine, and then we switched to contributing challenges. Without the express approval from the maintainers that we are allowed to do this, it feels almost wrong, or even a waste of time, to put in work to make challenges. If we do make the challenges and they don't approve it, what then? This goes into the reservation that the maintainer had about people contributing for academic reasons. It kind of feels like we're making these challenges because we need to, and not because it would actually help freeCodeCamp. I hope that I'm not somehow risking my grade by saying so. Even though I tried convincing myself otherwise, I think freeCodeCamp was not the right choice of project to work on. I don't feel any personal passion for it, but I definitely don't blame my teammates for this. I think we all were kind of pushed into this project because of our differing interests and skills. It was a safe option that worked for all of us, but possibly didn't satisfy all of us. That's the nature of group work, though, and I'm not that upset by it. School work is school work.
+
+Moving on in the week, we were supposed to have a guest lecture on Wednesday for learning bash and command line tools. Unfortunately, it was cancelled because Joanna had a family emergency. I hope everything is okay with her and her loved ones. Though I was looking forward to the class and improving my knowledge of those tools has been on my to-do list for a while, her situation was obviously more important. As a student, I'm surrounded by others who share my feelings on remote learning, but it's always from a student's perspective. It's interesting to think about how all of this is affecting educators, too. As we've been learning to adjust to this new way of schooling, they have as well. Is the collective depression and lack of motivation that I find in me, my friends, and classmates also present in my professors? On the outside, it seems like the answer is no, but I'm assuming that to professors, all the students seem relatively put together as well. This is a time of collective distress and uncertainty, and though not all of my professors have been more forgiving because of the circumstances, I'm going to empathize with them. 
+
+This next week will be the last full week of class and I can't say I'm not excited for it. Motivation has been close to nonexistant and I'm looking forward to not having virtual classes to worry about. I'm sad this semester turned out like this and I wish I had gotten more out of my classes (especially OSSD), but I suppose that's what the reality is now.
