Change Blog Post Title

--- a/_posts/2020-05-04-week13.md
+++ b/_posts/2020-05-04-week13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Week 13&#58; Thoughts and Updates on Contributing
+title: Week 13&#58; Thoughts and Updates on OSSD
 ---
 
 This past week was relatively uneventful. On Monday, we had group stand up reports. It seemed as if there wasn't a ton of updates from the groups since the last stand up, my group included. Additionally, most people wanted to present later in the schedule which Joanna found funny. My group was one of those who wanted to present later (though, not on the last day).
