Make Week 14 Blog Post

--- a/_posts/2020-05-11-week14.md
+++ b/_posts/2020-05-11-week14.md
@@ -1,4 +1,17 @@
 ---
 layout: post
-title: Week 14&#58;
+title: Week 14&#58; Final Thoughts
 ---
+
+This week will be the last week of class and despite my struggles in the middle of the semester, I don't feel bad about it. In fact, I feel kind of good about it. It might just be the happiness that comes with finishing a semester and finally being free for the summer, but I'm proud of myself for getting things back on track.
+
+Part of that is from what I've been able to do with freeCodeCamp. Within the past week, there's been a lot of activity with my group's contributions and it feels good to be able to provide something for the community. In the beginning stages of contributing, I did not feel very positive about what I was doing. It didn't feel like I was making any difference and I wasn't doing anything that really interested me. However, it all changed when one of the other contributors suggested moving some challenges from Arcade Mode to the Rosetta Code section. With this newfound sense of direction, I felt like I was doing something. At the same time, many of our pull requests that hadn't had much traction before were getting merged and commented on. I felt happy with the appreciation we were getting and felt like I was actually starting to understand how to use Git and the command line. 
+
+This next week is also the week in which my group will present. Working with my group has been nice and I'm glad we get some sort of conclusion to our work. To be honest, though, most of the presentations have felt like repeats of what was said in the standups (with a few exceptions). Maybe I'm making a mistake by thinking the presentations are much more significant than standups, but they just feel like longer standups that include information we've heard before. Either way, I'm glad that groups get to show off what they've done if that makes them happy.
+
+Overall, OSSD is not like any other class I've been in. Like Joanna said at the beginning of the semester, the class lacks structure. The contributions we make are on us and no one will check to make sure we're doing them. I thought I would be prepared for it, but I guess this semester as a whole took me by surprise. It's the first computer science elective I've ever taken and I would say that I'm glad it was my first.
+
+I'll definitely be contributing to more open source projects. Now that I know how to use GitHub and what to look for in open source communities, I think it would be cool to consistently contribute to a project I love. Whenever I run into open source tools or technologies now, I think it's so much cooler and I take a peek at their code. For example, I used this software called TestDisk when I had to recover files from my corrupted USB drive. It's open source and free to use, but I looked for their code and it wasn't stored in GitHub. Additionally, it seemed like only the creator made changes so I definitely wouldn't be looking to contribute there.
+
+I'm glad I took this class and now, I'm looking forward to future computer science electives.
+
